Fix T78149: Cycles memory leak rendering animation with Embree